--- a/using.html.md.erb
+++ b/using.html.md.erb
@@ -1,5 +1,5 @@
 ---
-title: Using Pivotal Event Alerts
+title: Using Event Alerts
 owner: Event Alerts
 ---
 
@@ -153,7 +153,7 @@ In order for a target to start receiving alerts, you must subscribe it to availa
 A topic is an event that is relevant to your system.
 
 <p class="note"><strong>Note:</strong> To set up and subscribe to Healthwatch topics,
-you <strong>must</strong> have Pivotal Healthwatch v1.3 or later installed.
+you <strong>must</strong> have Healthwatch v1.3 or later installed.
 </p>
 
 To subscribe a target to one or more alert topics:
