--- a/installing.html.md.erb
+++ b/installing.html.md.erb
@@ -1,5 +1,5 @@
 ---
-title: Installing and Configuring Pivotal Event Alerts
+title: Installing and Configuring Event Alerts
 owner: Event Alerts
 ---
 
@@ -10,12 +10,12 @@ For information about how to use this product, see [Using <%= vars.product_full 
 
 ##<a id='prereqs'></a> Prerequisites
 
-<!-- If the MariaDB issue has not been fixed, add a note under the MySQL for Pivotal Platform v2 or external MySQL credentials header about the issue. See 1.2 for example. -->
+<!-- If the MariaDB issue has not been fixed, add a note under the VMware Tanzu SQL with MySQL for VMs v2 or external MySQL credentials header about the issue. See 1.2 for example. -->
 
 You must have the following to install <%= vars.product_short %>:
 
 + <%= vars.app_runtime_full %> (<%= vars.app_runtime_abbr %>) v2.1.x or later
-+ MySQL for Pivotal Platform v2 or credentials for an existing external MySQL database v5.7 or later.
++ VMware Tanzu SQL with MySQL for VMs v2.0 and later or credentials for an existing external MySQL database v5.7 or later.
   + If binary logging is enabled, the user must have `SUPER` privileges or the global variable `log_bin_trust_function_creators` must be set to `1`.
 + If you want notifications sent to Slack channels, a Slack account
 + If you want notifications sent to email addresses, **Email Configuration** must be enabled and configured on the <%= vars.product_short %> tile
@@ -29,7 +29,7 @@ You must have the following to install <%= vars.product_short %>:
 
 Follow the procedures below to download and install the <%= vars.product_full %> tile:
 
-1. Download the product file from [Pivotal Network](https://network.pivotal.io/products/p-event-alerts/).
+1. Download the product file from [<%= vars.product_network %>](https://network.pivotal.io/products/p-event-alerts/).
 
 1. Navigate to the <%= vars.ops_manager_full %> Installation Dashboard and click **Import a Product** to upload the product file.
 
@@ -90,14 +90,14 @@ can scale down to one instance.
 
 ### <a id="mysql"></a> Configure MySQL Settings
 
-<%= vars.product_short %> can either use the MySQL for Pivotal Platform v2 service or an external MySQL database.
-To use the MySQL for Pivotal Platform  v2 service, you must have MySQL for Pivotal Platform v2.0 or later installed.
+<%= vars.product_short %> can either use the VMware Tanzu SQL with MySQL for VMs service or an external MySQL database.
+To use the VMware Tanzu SQL with MySQL for VMs service, you must have the tile installed.
 
 Follow the steps below to configure MySQL settings.
 
-#### Use the MySQL for Pivotal Platform v2 Service
+#### Use the VMware Tanzu SQL with MySQL for VMs Service
 
-If you have MySQL for Pivotal Platform v2.0 or later installed and want to use it for <%= vars.product_short %>,
+If you have VMware Tanzu SQL with MySQL for VMs v2.0 or later installed and want to use it for <%= vars.product_short %>,
 follow the steps below.
 
 1. Click the **MySQL Settings** tab.
@@ -242,11 +242,11 @@ To verify that you have the correct stemcell version for the <%= vars.product_fu
 a message similar to the following appears:
     ![Stemcell Section](images/stemcell-library-xenial.png)<%# Images require alt text that describes the image in detail. %>
     To upload a stemcell, do the following:
-      1. Navigate to [Pivotal Network](https://network.pivotal.io/) and click **Stemcells**.
+      1. Navigate to [<%= vars.product_network %>](https://network.pivotal.io/) and click **Stemcells**.
       1. Download the appropriate stemcell version targeted for your IaaS.
       1. Return to the **Stemcell** tab and click **Import Stemcell** to import the downloaded stemcell TGZ file.
       <p class="note"><strong>Note:</strong> <%= vars.product_full %> v1.2.3 and later require a Xenial stemcell.
-        To download a Xenial stemcell from Pivotal Network, see <a href="https://network.pivotal.io/products/stemcells-ubuntu-xenial/">Stemcells for <%= vars.platform_name %> (Ubuntu Xenial)</a>.</p>
+        To download a Xenial stemcell from <%= vars.product_network %> see <a href="https://network.pivotal.io/products/stemcells-ubuntu-xenial/">Stemcells for <%= vars.platform_name %> (Ubuntu Xenial)</a>.</p>
 
 1. Click **Save**.
 
@@ -260,8 +260,8 @@ For more information about this <%= vars.ops_manager %> page, see [Reviewing Pen
 ##<a id="plugin"></a> Install the <%= vars.product_full %> Plugin
 
 You must install the <%= vars.product_full %> plugin in order to configure notifications.
-You can use this cf CLI plugin to subscribe to topics published by Pivotal Healthwatch.
-For general information about Pivotal Healthwatch, see [Pivotal Healthwatch](http://docs.pivotal.io/pcf-healthwatch/index.html).
+You can use this cf CLI plugin to subscribe to topics published by Healthwatch.
+For general information about Healthwatch, see [Healthwatch](http://docs.pivotal.io/pcf-healthwatch/index.html).
 
 ###<a id='installing'></a> Install the Plugin
 
@@ -269,7 +269,7 @@ The plugin is currently only available to admins.
 
 To install the plugin:
 
-1. Download one of the following files from Pivotal Network, depending on your operating system (OS).
+1. Download one of the following files from <%= vars.product_network %>, depending on your operating system (OS).
     * `pcf-event-alerts-cli-plugin-OS-binary`
     * `pcf-event-alerts-cli-plugin-OS-exe`
 
