Update ops manager variables [#174088735]

--- a/installing.html.md.erb
+++ b/installing.html.md.erb
@@ -27,7 +27,7 @@ Follow the procedures below to download and install the <%= vars.product_short %
 
 1. Download the product file from [<%= vars.product_network %>](https://network.pivotal.io/products/p-event-alerts/).
 
-1. Navigate to the <%= vars.ops_manager_full %> Installation Dashboard and click **Import a Product** to upload the product file.
+1. Navigate to the <%= vars.ops_manager %> Installation Dashboard and click **Import a Product** to upload the product file.
 
 1. Under the **Import a Product** button, click **+** next to the version number of <%= vars.product_short %>.
 This adds the tile to your staging area.
