--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -53,7 +53,7 @@ The following table provides version and version-support information about <%= v
     </tr>
     <tr>
 
-        <td>Compatible <%= vars.ops_manager_full %> version(s)</td>
+        <td>Compatible <%= vars.ops_manager %> version(s)</td>
         <td>2.3 and later</td>
     </tr>
     <tr>
