Update ops manager variables [#174088735]

--- a/troubleshooting.html.md.erb
+++ b/troubleshooting.html.md.erb
@@ -65,7 +65,7 @@ This section provides information about how to troubleshooting specific errors o
 
         id: 'errand-fails',
         description: 'Deploy Event Alerts Errand Fails',
-        symptom: 'When you <strong>Apply Changes</strong>, you see in the ' +  vars.ops_manager_full +
+        symptom: 'When you <strong>Apply Changes</strong>, you see in the ' +  vars.ops_manager +
         ' installation pane that the <strong>Deploy Event Alerts</strong>
         errand fails with the following error:
 
