Update platform name variables [#174088735]

--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -16,13 +16,13 @@ This documentation describes <%= vars.product_full %>.
 As an admin, you might want to receive notifications about important events that occur on your system.
 The <%= vars.product_short %> service gives you the option to set up alerts for a variety of events.
 You can use this service to subscribe to notification topics---notable events that might occur.
-Notification topics are monitored by publishers---<%= vars.platform_name %> components that emit events.
+Notification topics are monitored by publishers---<%= vars.app_runtime_full %> (<%= vars.app_runtime_abbr %>) components that emit events.
 You can send these notifications using email, Slack, or webhook integration.
 
 For example, you can subscribe to a topic from [Healthwatch](http://docs.pivotal.io/pcf-healthwatch/index.html)
 that sends a notification when the memory use on a specific VM reaches a certain percentage.
 
-<%= vars.platform_name %> users with admin permissions can run event alert commands and subscribe to alerts.
+<%= vars.app_runtime_abbr %> users with admin permissions can run event alert commands and subscribe to alerts.
 Admins can configure event alerts using the Cloud Foundry Command Line Interface (cf CLI) tool.
 
 ## <a id='features'></a>Key Features
