Remove remaining Pivotals [#174088735]

--- a/release-notes.html.md.erb
+++ b/release-notes.html.md.erb
@@ -148,7 +148,7 @@ New features and changes in this release:
 For more information about configuring proxy settings, see [Configuring Proxy Settings for All Applications
 ](https://docs.pivotal.io/pivotalcf/opsguide/config-proxy.html).
 * Improves log error messages when alerts fail to send.
-* Adds option to disable Pivotal Metrics Forwarder integration.
+* Adds option to disable Metrics Forwarder integration.
 * Adds support for disabling SMTP TLS. For more information, see [Configure Email Notifications](./installing.html#email_settings)
 * If you subscribed to `-all` topics, you can selectively unsubscribe from individual topics.
 You can also selectively subscribe to individual topics.
@@ -305,7 +305,7 @@ These version numbers are aligned as of <%= vars.product_short %> v1.2.5.
 
 New features and changes in this release:
 
-* To view Healthwatch topics, you must have [Pivotal Healthwatch v1.3](https://docs.pivotal.io/pcf-healthwatch) installed.
+* To view Healthwatch topics, you must have [Healthwatch v1.3](https://docs.pivotal.io/pcf-healthwatch) installed.
 
 * Dependence on notifications has been removed.
 
