Update a few more old variables [#174088735]

--- a/release-notes.html.md.erb
+++ b/release-notes.html.md.erb
@@ -262,7 +262,7 @@ New features and changes in this release:
 * Before using <%= vars.product_short %> v1.2.3, you must update any BOSH add-ons to support Xenial stemcells.
     For more information, see [Prerequisites](./installing.html#prereqs).
 <p class="note breaking"><strong>Breaking Change: </strong> <%= vars.product_short %> v1.2.3 and later require a Xenial stemcell.
-You must manually download and import a new stemcell into the <%= vars.ops_manager_full %> Stemcell Library before deploying <%= vars.product_short %>.
+You must manually download and import a new stemcell into the <%= vars.ops_mangaer %> Stemcell Library before deploying <%= vars.product_short %>.
 Any automation you have set up to update your <%= vars.product_short %> deployments using Trusty stemcells might break.</p>
 
 ### <a id="fixed123"></a> Fixed Issues
