--- a/troubleshooting.html.md.erb
+++ b/troubleshooting.html.md.erb
@@ -168,7 +168,7 @@ If you do not resolve this issue, <%= vars.product_short %> is not deployed.
 
 #### Symptom
 
-When you **Apply Changes**, you see in the <%= vars.ops_manager_full %> installation pane that
+When you **Apply Changes**, you see in the <%= vars.ops_mangaer %> installation pane that
 the **Deploy <%= vars.product_short %>** errand fails with the following error:
 
 <pre class="terminal">
