--- a/installing.html.md.erb
+++ b/installing.html.md.erb
@@ -102,7 +102,7 @@ follow the steps below.
 
 1. Click the **MySQL Settings** tab.
 
-1. Select **Pivotal MySQL Service** and enter the service plan to use. For example, `db-small`.
+1. Select **MySQL Service** and enter the service plan to use. For example, `db-small`.
   ![MySQL Settings Service Option](images/mysql-settings-service.png)<%# Images require alt text that describes the image in detail. %>
 
 1. Click **Save**.
