--- a/installing.html.md.erb
+++ b/installing.html.md.erb
@@ -98,7 +98,7 @@ If you have Tanzu SQL for VMs installed and want to use the service:
 
 1. Click **MySQL Settings**.
 
-1. Select **Pivotal MySQL Service**.
+1. Select **MySQL Service**.
 1. Enter the Tanzu SQL for VMs service plan you want to use.
 The service plan you enter must be a single node plan. For example, `db-small`.
   ![MySQL Settings Service Option](images/mysql-settings-service.png)<%# Images require alt text that describes the image in detail. %>
