[#174361990]add alt text to images

--- a/using.html.md.erb
+++ b/using.html.md.erb
@@ -84,7 +84,14 @@ To create a Slack target:
 
 Event alerts to a Slack channel, for example a **Critical Threshold Event** alert and a **Healthy Threshold Event** alert, might appear as follows:
 
-![Sample Slack Alerts](sample-slack-alerts.png)<%# Images require alt text that describes the image in detail. %>
+![The example of a critical event is "Event occurred on foundation pws and deployment councourse.
+ Critical Threshold Event: VM Health Check: riemann; pws. The VM Health Check (system.healthy)
+ on this job is in the Critical threshold.
+ Value 0.875 Job riemann Job ID 70d9… Recommended Response Documentation  https://docs.pivotal.io/…"
+ The example of a healthy event is "Event occurred on foundation pws and deployment log-cache
+ Healthy Threshold Event: VM Memory Used: log-cache: pws The percentage of Memory Used (system.mem.percent)
+ on this job is in the Healthy threshold. Value 79.625% Job log-cache Job ID 592b…".
+ ](sample-slack-alerts.png)
 
 ### <a id='webhook_targets'></a> Create Webhook Targets
 
