[#174361990]add alt text to images

--- a/installing.html.md.erb
+++ b/installing.html.md.erb
@@ -38,7 +38,8 @@ This adds the tile to your staging area.
 
 1. Click the newly added **<%= vars.product_full %>** tile to open its configuration panes.
 
-    ![Configuration Panes](images/config-panes-2-1.png)<%# Images require alt text that describes the image in detail. %>
+    ![Screenshot of the Event Alerts configuration pane: the settings tab is selected showing
+     the Configure AZs and Networks pane](images/config-panes-2-1.png)
 
 ## <a id="config-tile"></a> Configure the Tile
 
@@ -49,7 +50,10 @@ Follow the procedures below to configure the <%= vars.product_full %> tile.
 Follow the steps below to choose an Availability Zone (AZ) to run <%= vars.product_short %> and to select networks.
 
 1. Click the **Assign AZs and Networks** tab.
-  ![AZ and Network Assignments Section](images/azs-and-network.png)<%# Images require alt text that describes the image in detail. %>
+
+    <img src="images/azs-and-network.png" alt="Screenshot of the AZ and Network Assignments pane:
+             the fields are described in the following step.
+             In this example, the regions are us-central1 a, b, and c." width="300">
 
 1. Configure the fields as follows:
   <table class="nice">
@@ -103,7 +107,12 @@ follow the steps below.
 1. Click the **MySQL Settings** tab.
 
 1. Select **MySQL Service** and enter the service plan to use. For example, `db-small`.
-  ![MySQL Settings Service Option](images/mysql-settings-service.png)<%# Images require alt text that describes the image in detail. %>
+   <img src="images/mysql-settings-service.png" alt="Screenshot of the MySQL Settings pane.
+    There are two radio buttons underneath the MySQL Database Location heading.
+    The MySQL Service button is selected and the text field labeled "Service plan to use for the MySQL service"
+    shows the default, "db-small".
+    The second radio button is labeled External.
+    The Save button is at the bottom of the pane." width="550">
 
 1. Click **Save**.
 
@@ -192,7 +201,10 @@ Follow the steps below to configure settings for <%= vars.product_short %> email
 1. Click the **Email Configuration** tab.
 
 1. Under **SMTP**, select **Enabled**.
-  ![Enable Email](images/email-config-details.png)<%# Images require alt text that describes the image in detail. %>
+    <img src="images/email-config-details.png" alt="Screenshot of the Email Configuration pane.
+    Use this pane to configure email details for sending email notifications.
+    Under the SMTP heading, the Enabled radio button is selected.
+    The fields are described in the following step.">
 
 1. Configure the fields as follows:
 
@@ -240,7 +252,9 @@ To verify that you have the correct stemcell version for the <%= vars.product_fu
 
 1. Verify the settings. If <%= vars.product_short %> cannot detect a stemcell TGZ file,
 a message similar to the following appears:
-    ![Stemcell Section](images/stemcell-library-xenial.png)<%# Images require alt text that describes the image in detail. %>
+    ![Screenshot of the Stemcell Library. The third row contains the Event Alerts product.
+     Under the Import Stemcell button for that row is the message "No compatible stemcell available".
+     ](images/stemcell-library-xenial.png)
     To upload a stemcell, do the following:
       1. Navigate to [<%= vars.product_network %>](https://network.pivotal.io/) and click **Stemcells**.
       1. Download the appropriate stemcell version targeted for your IaaS.
