--- a/installing.html.md.erb
+++ b/installing.html.md.erb
@@ -109,8 +109,8 @@ follow the steps below.
 1. Select **MySQL Service** and enter the service plan to use. For example, `db-small`.
    <img src="images/mysql-settings-service.png" alt="Screenshot of the MySQL Settings pane.
     There are two radio buttons underneath the MySQL Database Location heading.
-    The MySQL Service button is selected and the text field labeled "Service plan to use for the MySQL service"
-    shows the default, "db-small".
+    The MySQL Service button is selected and the text field labeled 'Service plan to use for the MySQL service'
+    shows the default, 'db-small'.
     The second radio button is labeled External.
     The Save button is at the bottom of the pane." width="550">
 
@@ -202,7 +202,7 @@ Follow the steps below to configure settings for <%= vars.product_short %> email
 
 1. Under **SMTP**, select **Enabled**.
     <img src="images/email-config-details.png" alt="Screenshot of the Email Configuration pane.
-    Use this pane to configure email details for sending email notifications.
+    The text at the top says, 'Use this pane to configure email details for sending email notifications'.
     Under the SMTP heading, the Enabled radio button is selected.
     The fields are described in the following step.">
 
@@ -253,8 +253,7 @@ To verify that you have the correct stemcell version for the <%= vars.product_fu
 1. Verify the settings. If <%= vars.product_short %> cannot detect a stemcell TGZ file,
 a message similar to the following appears:
     ![Screenshot of the Stemcell Library. The third row contains the Event Alerts product.
-     Under the Import Stemcell button for that row is the message "No compatible stemcell available".
-     ](images/stemcell-library-xenial.png)
+     Under the Import Stemcell button for that row is the message "No compatible stemcell available".](images/stemcell-library-xenial.png)
     To upload a stemcell, do the following:
       1. Navigate to [<%= vars.product_network %>](https://network.pivotal.io/) and click **Stemcells**.
       1. Download the appropriate stemcell version targeted for your IaaS.
