--- a/installing.html.md.erb
+++ b/installing.html.md.erb
@@ -105,12 +105,12 @@ If you have Tanzu SQL for VMs installed and want to use the service:
 1. Select **MySQL Service**.
 1. Enter the Tanzu SQL for VMs service plan you want to use.
 The service plan you enter must be a single node plan. For example, `db-small`.
-    <img src="images/mysql-settings-service.png" alt="Screenshot of the MySQL Settings pane.
- There are two radio buttons underneath the MySQL Database Location heading.
- The MySQL Service button is selected and the text field labeled "Service plan to use for the MySQL service"
- shows the default, "db-small".
- The second radio button is labeled External.
- The Save button is at the bottom of the pane." width="550">
+   <img src="images/mysql-settings-service.png" alt="Screenshot of the MySQL Settings pane.
+    There are two radio buttons underneath the MySQL Database Location heading.
+    The MySQL Service button is selected and the text field labeled 'Service plan to use for the MySQL service'
+    shows the default, 'db-small'.
+    The second radio button is labeled External.
+    The Save button is at the bottom of the pane." width="550">
 
 1. Click **Save**.
 
@@ -200,7 +200,7 @@ Follow the steps below to configure settings for <%= vars.product_short %> email
 
 1. Under **SMTP**, select **Enabled**.
     <img src="images/email-config-details.png" alt="Screenshot of the Email Configuration pane.
-    Use this pane to configure email details for sending email notifications.
+    The text at the top says, 'Use this pane to configure email details for sending email notifications'.
     Under the SMTP heading, the Enabled radio button is selected.
     The fields are described in the following step.">
 
@@ -243,8 +243,7 @@ To verify that you have the correct stemcell version for the <%= vars.product_fu
 1. Verify the settings. If <%= vars.product_short %> cannot detect a stemcell TGZ file,
 a message similar to the following appears:
     ![Screenshot of the Stemcell Library. The third row contains the Event Alerts product.
- Under the Import Stemcell button for that row is the message "No compatible stemcell available".
- ](images/stemcell-library-xenial.png)
+     Under the Import Stemcell button for that row is the message "No compatible stemcell available".](images/stemcell-library-xenial.png)
     If you need to upload a stemcell:
       1. Navigate to [<%= vars.product_network %>](https://network.pivotal.io/) and click **Stemcells**.
       1. Download the appropriate stemcell version targeted for your IaaS.
