Add release notes for 1.2.12 [#176214683] [#178122625]
Signed-off-by: Kira Boyle <kboyle@pivotal.io>

--- a/troubleshooting.html.md.erb
+++ b/troubleshooting.html.md.erb
@@ -105,61 +105,7 @@ This causes the errand to fail.
 
 #### Solution
 
-To solve this issue:
-
-1. Export the GUID of the `event-alerts` space by running:
-
-    ```
-    export SPACE_GUID=$(cf space event-alerts --guid)
-    ```
-
-1. To find the GUID of your Tanzu SQL for VMs service instance, run:
-
-    ```
-    cf curl "/v3/service_instances?names=pcf-event-alerts-db&space_guids=${SPACE_GUID}"
-    ```
-
-2. Record the GUID from the `resources[0].guid` property in the JSON output of the command
-   in the step above.
-
-1. To retrieve a list of the VMs in your Tanzu SQL for VMs service instance, run:
-
-    ```
-    bosh -d service-instance_GUID vms
-    ```
-    Where `GUID` is the GUID of your Tanzu SQL for VMs service instance that you recorded
-    in the step above.
-
-1. For each `mysql` VM:
-
-     1. Run:
-
-        ```
-        bosh -d service-instance_GUID ssh MYSQL-INSTANCE-NAME
-        ```
-
-        Where:
-        * `GUID` is the GUID of your Tanzu SQL for VMs service instance.
-        * `MYSQL-INSTANCE-NAME` is one of the MySQL instance names from the list of VMs
-          that you retrieved in the step above.
-
-     1. Switch to the root user profile in your terminal by running:
-
-        ```
-        sudo -i
-        ```
-
-     1. Open the `/var/vcap/jobs/mysql/config/my.cnf` file in a text editor.
-
-     1. Delete the line containing `tls_version = TLSv1.2`.
-
-     1. Restart the VM by running:
-
-        ```
-        monit restart mysql
-        ```
-
-1. After you have restarted each MySQL VM, rerun the **Deploy <%= vars.product_short %> Errand**.
+This issue has been resolved in <%= vars.product_full %> v1.2.12.
 
 ###<a id="errand-binary-logging"></a> Deploy <%= vars.product_short %> Errand Fails Due to Binary Logging
 
