--- a/release-notes.html.md.erb
+++ b/release-notes.html.md.erb
@@ -7,6 +7,30 @@ owner: Event Alerts
 
 <%= partial vars.path_to_partials + "/upgrade-planner" %>
 
+##<a id="1-2-12"></a> v1.2.12
+
+**Release Date: May 14, 2021**
+
+### <a id="fixed1212"></a> Fixed Issues
+
+This release fixes the following issue:
+
+* <%= vars.product_name %> no longer fails to connect to its provisioned backing database
+  when **TLS Options** is set to any value other than **Not Configured**
+  in the **Security** pane of the Tanzu SQL for VMs v2.10 tile.
+
+###<a id="known1212"></a> Known Issues
+
+This release has the following issues:
+
+<%= partial vars.path_to_partials + "/eva/deployfails-ki" %>
+
+<%= partial vars.path_to_partials + "/eva/azure-usernames-ki" %>
+
+<%= partial vars.path_to_partials + "/eva/mariadb-ki" %>
+
+<%= partial vars.path_to_partials + "/eva/mysql-ip-binding-ki" %>
+
 ##<a id="1-2-11"></a> v1.2.11
 
 **Release Date: December 7, 2020**
