--- a/troubleshooting.html.md.erb
+++ b/troubleshooting.html.md.erb
@@ -71,6 +71,10 @@ This section provides information about how to troubleshoot specific errors.
 
 ###<a id="errand-communication-failure"></a> Deploy <%= vars.product_short %> Errand Fails Due to Communications Link Failure
 
+<p class="note">
+   <strong>Note:</strong> This issue has been resolved in <%= vars.product_short %> v1.2.12.
+</p>
+
 This issue occurs when you have VMware Tanzu™ SQL with MySQL for VMs (Tanzu SQL for VMs) v2.10 installed
 and **TLS Options** is set to any value other than **Not Configured**
 in the **Security** pane of the Tanzu SQL for VMs tile.
